##########################################################################################
# Program Name :     Discord Bot
# Author       :     DMCTruong
# Last Updated :     August 21, 2017
# License      :     MIT
# Description  :     A general purpose bot written for Discord               
##########################################################################################

08/21/17
- Changed /uptime command to /date
	/date:	Gives the current date and time
- Changed "cogs" folder name to "modules"

08/20/17
- Created new "owner _only" cog and moved the /restart and /shutdown commands to it.
- Added more console print statements for debugging purposes
- Changed command prefix from "/" to "::"
- Removed /trollEveryone, /noMoreTroll, and /kill commands

08/19/17
- Added Table of Contents with working links
- Updated Readme

08/18/17
- Only the owner can use the /shutdown and /restart command
- Added two commands:
	/restart:     Restarts the bot
	/join_date: Gives user's server join date	
- Added console print statements for debugging purposes

08/07/17
- Moved the bots from Cloud9 to PythonAnywhere
- Updated Readme and added a command list

08/07/17
- Added /uptime command: A timer that gives the user a 15 minute warning when the bot needs to restart.
	Since the bots are being hosted on Cloud9, the service automatically shutdown the bots after every 5 hours.
	This command helps the user tell when it's almost time for the bots to be shutdown so the user may manually restart.
	This command is temporary until a proper restart function is implemented with the timer.

08/06/17
- Updated the README, a demo of the bot is now hosted on Cloud9
- The bot can now posts gifs when the /hug command is used. The gifs are stored on Webhost000
- Added /shutdown command: Allows user to shutdown the bot from Discord chat

08/01/17
- Added MIT License
- Minor additions to Bot.py and configurations.py
- Removed Minecraft-related database commands
- Customized /help command
