@@ -1,7 +1,7 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 21, 2017
+# Last Updated :     August 25, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
@@ -19,14 +19,14 @@
 #	- Update pyrebase commands
 
 
-
-# Known Issues:
+# Known Issues: Note move this to readme
 #	1. The bot seems to buffer a lot when playing music. 
 #		Hopefully, the issue and a solution will be found soon.
 #	- Solution: If the bot seems to be buffering, try changing the server location
 
 import discord
 from discord.ext import commands
+import logging
 import asyncio
 import configurations
 
@@ -36,7 +36,22 @@ from modules import miscellaneous
 from modules import music
 from modules import owner_only
 from modules import timer
-			
+
+# ------------- Logging --------------
+
+if configurations.DISCORD_LOG in ["y", "Y", "yes", "Yes", "YES"]:
+    logger = logging.getLogger('discord')
+    logger.setLevel(logging.DEBUG)
+    handler = logging.FileHandler(filename='discord.log', encoding='utf-8', mode='w')
+    handler.setFormatter(logging.Formatter('%(asctime)s:%(levelname)s:%(name)s: %(message)s'))
+    logger.addHandler(handler)
+
+# if configurations.COMMAND_LOG in ["y", "Y", "yes", "Yes", "YES"]:
+
+# if configurations.ERROR_LOG in ["y", "Y", "yes", "Yes", "YES"]:
+
+# -------- Initialize the Bot --------
+
 bot = commands.Bot(configurations.PREFIX) 
 
 bot.add_cog(database.Database(bot))
@@ -48,23 +63,14 @@ bot.add_cog(timer.Time(bot))
 
 print("\nPlease wait while the Bot logs in ...")
 
-# Upon login, say ...
 @bot.event
 async def on_ready():
     print("\nLogged in as:\n")
     print("Username : " + bot.user.name)
     print("ID Number: " + bot.user.id)
-    print('\nType "::help" in the Discord chat for the list of commands.')
+    print('\nType ">>help" in the Discord chat for the list of commands.')
     print("=============================================")
 	
-    await bot.change_presence(game=discord.Game(name='::help for commands!'))
-
-@bot.command(pass_context=True)
-async def join_date(ctx, member: discord.Member = None):
-    """Gives user's server join date"""
-
-    if member is None:
-       member = ctx.message.author
-       await bot.say('{0} joined the server on {0.joined_at}'.format(member))
+    await bot.change_presence(game=discord.Game(name='>>help for commands!'))
 	
 bot.run(configurations.BOT_TOKEN)
