@@ -1,7 +1,7 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 20, 2017
+# Last Updated :     August 25, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
@@ -13,15 +13,15 @@
 # Once all of the following information is filled out, the bot will be ready to use. Just 
 # double click on Bot.py and you will be able to use all of the bot commands in discord! 
 
-# For more information about what commands the bot can use, type ::help in 
+# For more information about what commands the bot can use, type >>help in 
 # the Discord chat.
 
 # <--------------------------- Important Configurations ---------------------------------->
 
-PREFIX = "::"
+PREFIX = ">>"
 
-# Currently, the default command prefix is "::"
-# For example: ::echo Hello World
+# Currently, the default command prefix is ">>"
+# For example: >>echo Hello World
 # You are welcome to change the command prefix to anything you wish.
 
 BOT_OWNER_ID = "Bot Owner's ID here"
@@ -50,14 +50,27 @@ FIREBASE_INFO = {
 
 # <=======================================================================================>
 # If you are reading this, congratulations, you've just finished configurating the Bot 
-# and you are now ready to go! Just double click Bot.py and then type /commands in the 
-# Discord chat for the list of commands that the Bot can do!
-# <=======================================================================================>
+# and you are now ready to go! Just double click Bot.py and then type >>help in the 
+# Discord chat for the list of commands that the Bot can do! 
 
-# Thank you for using DMCTruong's Discord Bot!
+# Beyond this point are additional features that you can configure but the Bot will 
+# still work if you leave these settings as default.
+
+# Other than that, thank you for using DMCTruong's Discord Bot!
 
 # For support, please submit a "New Issue" to the link below and I will do my best to help.
 # https://github.com/DMCTruong/Discord-Bot/issues
 
+# <=======================================================================================>
+
+# <----------------------------- Logging Configurations ---------------------------------->
+
+# The following are logging settings. For now, these features are set to off by default
+# because the amount of information that gets output can be a lot.
+# If you would like to turn these features on, change the "NO" to "YES."
+
+COMMAND_LOG = "NO"
+ERROR_LOG = "NO"
+DISCORD_LOG = "NO"
 
 # <--------------------------------------------------------------------------------------->
