@@ -1,4 +1,3 @@
 #!bin/bash
 printf "Restarting the bot..."
-alias python='winpty python.exe'
 python Bot.py
